--- a/ace_eletsmeet/assets/css/letsmeet_custom.css
+++ b/ace_eletsmeet/assets/css/letsmeet_custom.css
@@ -1,3 +1,16 @@
+.cPointer {
+     cursor: pointer;
+}
+
 .timezone {
     display: none;
+}
+
+.form-group.required .control-label:after { 
+   content:"*";
+   color:red;
+}
+
+.errorDisplay {
+     display:none;
 }
