css for javascript based tool box in contacts index

--- a/ace_eletsmeet/assets/css/letsmeet_custom.css
+++ b/ace_eletsmeet/assets/css/letsmeet_custom.css
@@ -1,8 +1,16 @@
+.cPointer {
+     cursor: pointer;
+}
+
 .timezone {
     display: none;
 }
 
-.form-group.required .control-label::after {
-    color: red;
-    content: "*";
+.form-group.required .control-label:after { 
+   content:"*";
+   color:red;
+}
+
+.errorDisplay {
+     display:none;
 }
