--- a/ace_eletsmeet/assets/css/letsmeet_custom.css
+++ b/ace_eletsmeet/assets/css/letsmeet_custom.css
@@ -14,3 +14,27 @@
 .errorDisplay {
      display:none;
 }
+
+.thumbnail-dp {
+  position: relative;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  float :left;
+  top:10px;
+  right:5px;
+}
+.thumbnail-dp img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+.thumbnail-dp img.portrait {
+  width: 100%;
+  height: auto;
+}
