--- a/ace_eletsmeet/assets/css/letsmeet_custom.css
+++ b/ace_eletsmeet/assets/css/letsmeet_custom.css
@@ -2,7 +2,11 @@
      cursor: pointer;
 }
 
-.timezone {
+/*.timezone {
+    display: none;
+}*/
+
+.display-none{
     display: none;
 }
 
@@ -13,4 +17,62 @@
 
 .errorDisplay {
      display:none;
+}
+.thumbnail-dp {
+  position: relative;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  float :left;
+  top:10px;
+  right:5px;
+}
+.thumbnail-dp img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+.thumbnail-dp img.portrait {
+  width: 100%;
+  height: auto;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 10000;
+}
+
+/*.loading_modal{
+    border-radius: 5px;
+    left: 50%;
+    line-height: 200px;
+    margin-left: -150px;
+    position: fixed;
+    text-align: center;
+    top: 25%;
+    z-index: 10001;
+}*/
+
+.loading_modal{
+    position: fixed;
+    text-align: center;
+    top: 25%;
+    z-index: 10001;
+}
+
+.loading_modal_left_48{
+    left: 48%;
+}
+
+.loading_modal_left_30{
+    left: 30%;
 }
