--- a/ace_eletsmeet/assets/css/letsmeet_custom.css
+++ b/ace_eletsmeet/assets/css/letsmeet_custom.css
@@ -14,7 +14,6 @@
 .errorDisplay {
      display:none;
 }
-
 .thumbnail-dp {
   position: relative;
   width: 32px;
@@ -37,4 +36,39 @@
 .thumbnail-dp img.portrait {
   width: 100%;
   height: auto;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 10000;
+}
+
+/*.loading_modal{
+    border-radius: 5px;
+    left: 50%;
+    line-height: 200px;
+    margin-left: -150px;
+    position: fixed;
+    text-align: center;
+    top: 25%;
+    z-index: 10001;
+}*/
+
+.loading_modal{
+    position: fixed;
+    text-align: center;
+    top: 25%;
+    z-index: 10001;
+}
+
+.loading_modal_left_48{
+    left: 48%;
+}
+
+.loading_modal_left_30{
+    left: 30%;
 }
